--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -282,8 +282,8 @@
                         <span class="menu-arrow arrow_carrot-right"></span>
                     </a>
           <ul class="sub">
-            <li><a class="" href="form_component.html">Form Elements</a></li>
-            <li><a class="" href="form_validation.html">Form Validation</a></li>
+            <li><a class="" href="form-component">Form Elements</a></li>
+            <li><a class="" href="form-validation">Form Validation</a></li>
           </ul>
         </li>
         <li class="sub-menu">
